# cc_setup

./: .gitignore  CLAUDE.md  README.md  README_backup.md  README_gitignore_section.md  USAGE.md  basic_template_recommendation.md  cc_setup.py  implement_identical_file_feature.md  implement_local_store.md  implementation_plan.md  install.bat  migrate_to_store.py  pyproject.toml  specs.md  update_readme.py  worktree_template_recommendation.md
.claude/: settings.local.json
.claude/commands/: conditional_docs.md
pythonscipap/.claude/: cc_setup.log.jsonl
specs/: issue-0-adw-0-sdlc_planner-add-isox-mode.md  issue-0-adw-0-sdlc_planner-enhanced-cli-output.md  issue-0-adw-0-sdlc_planner-missing-adws-subdirectories.md  issue-0-adw-0-sdlc_planner-operation-log-jsonl.md  issue-0-adw-0-sdlc_planner-switch-to-rich-argparse.md  issue-0-adw-00000000-sdlc_planner-generalize-artifacts.md  issue-0-adw-gitignore-gitignore-management.md  issue-1-adw-setcomp-set-based-gitignore-comparison.md  issue-N-adw-b281b95b-sdlc_planner-skip-identical-overwrite.md  jsonl_execution_log_implementation_plan.md  jsonl_execution_log_spec.md  log_implementation_handoff.md
store/: CUSTOMIZATION_GUIDE.md  migration_log.txt
store/basic/: SETTINGS_README.md
store/basic/adws/: TESTING.md  adw_build.py  adw_document.py  adw_patch.py  adw_plan.py  adw_review.py  adw_test.py
store/basic/adws/adw_modules/: utils.py
store/basic/adws/adw_tests/: health_check.py  test_unit_modules.py  test_workflow_integration.py
store/basic/commands/: chore.md  conditional_docs.md  feature.md  patch.md  start.md
store/basic/scripts/: reset_db.sh  stop_apps.sh
store/git/: .gitignore_python
store/iso/commands/: bug.md  prepare_app.md  test.md
store/iso_v1/adws/: adw_build_iso.py  adw_document_iso.py  adw_plan_build_iso.py  adw_plan_build_test_iso.py  adw_plan_iso.py  adw_review_iso.py  adw_sdlc_iso.py  adw_test_iso.py
store/iso_v1/adws/adw_modules/: agent.py  data_types.py
store/iso_v1/adws/lnav/: adw_execution.lnav.json  (+1 more)
test_adws_fix/.claude/: cc_setup.log.jsonl
test_adws_iso/.claude/: cc_setup.log.jsonl
test_reorder/: .gitignore
test_set_compare/: .gitignore
test_target/: .gitignore  .gitignore.backup
test_target2/.claude/hooks/: notification.py
test_target_jsonl/.claude/: cc_setup.log.jsonl
test_target_jsonl/.claude/commands/: conditional_docs.md  install.md  test_e2e.md
test_target_jsonl/scripts/: copy_dot_env.sh  expose_webhook.sh  start.sh
test_target_jsonl2/.claude/: cc_setup.log.jsonl
