[project]
name = "cc_setup"
version = "0.3.0"
description = "Claude Code setup tool for copying artifacts into target projects"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich>=13.0.0",
    "rich-argparse>=1.0.0",
]

[project.scripts]
cc_setup = "cc_setup:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
